# PidAutotunerToolkitDotNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pid-toolkit.lvlps  pid-toolkit.lvproj
doc/: CMakeLists.txt
src/cpp/: .gitignore  CMakeLists.txt  pidtoolkit.pro
src/cpp/libarduinobasedautotuning/: ArduinoBasedAutotuningDll.vcxproj  ArduinoBasedAutotuningDll.vcxproj.filters  CMakeLists.txt  arduinobasedautotuning.cpp  dllmain.cpp  input.cpp  parameters.cpp  pch.cpp  version.cpp
src/cpp/libpidarduinomodbusmaster/: CMakeLists.txt  master.cpp  options.cpp  retry.cpp
src/cpp/libpidtoolkit/: CMakeLists.txt  console.cpp  default.cpp  exception.cpp  options.cpp  parsing.cpp  reporting.cpp  serial.cpp  setting.cpp  stream.cpp  text.cpp  version.cpp
src/cpp/libpidtoolkitpid/: CMakeLists.txt
src/cpp/libpidtoolkitservice/: CMakeLists.txt  options.cpp  service.cpp  setting.cpp  subscriptions.cpp
src/cpp/libpidtoolkittune/: CMakeLists.txt  version.cpp
src/cpp/libpidtoolkitui/: CMakeLists.txt  baud.cpp  configuration.cpp  factor.cpp  formatting.cpp  fvalidator.cpp  interval.cpp  libpidtoolkitui.pri  mode.cpp  number.cpp  operation.cpp  port.cpp  range.cpp  status.cpp  tuning.cpp  types.cpp
src/cpp/libpidtoolkituiconfiguration/: CMakeLists.txt  blackbox.cpp  controller.cpp  modbus.cpp  timer.cpp  tuning.cpp  ui.cpp
src/cpp/libpidtoolkituimodel/: CMakeLists.txt  accuracy.cpp  baud.cpp  factor.cpp  force.cpp  format.cpp  interval.cpp  modbus.cpp  mode.cpp  number.cpp  operation.cpp  port.cpp  ptu.cpp  ptum.cpp  ptum_.cpp  range.cpp  restriction.cpp  serial.cpp  status.cpp  triplet.cpp  tuning.cpp
src/cpp/libpidtoolkituiplugin/: CMakeLists.txt
src/cpp/libpidtoolkituiplugin/Pid/Toolkit/: CMakeLists.txt  assets.qrc  component.qrc  connection.cpp  floatvalidator.cpp  libpidtoolkituiplugin.pri  model.qrc  pathvalidator.cpp  plugin.cpp  qmldir
src/cpp/libpidtoolkituiplugin/Pid/Toolkit/assets/: Style.qml  qmldir
src/cpp/libpidtoolkituiplugin/Pid/Toolkit/qml/: ControlFactor.qml  ControlFilePath.qml  ControlNumber.qml  ControlRange.qml  ControlRealSpinBox.qml  ControlUiRange.qml  ControllerSettings.qml  DialogController.qml  DialogEvaluation.qml  DialogLogging.qml  DialogPid.qml  DialogSettings.qml  DialogTiming.qml  DialogTuning.qml  DialogUiNumber.qml  DialogUiRange.qml  PidToolkit.js  SettingsConnection.qml  SettingsController.qml  SettingsLogging.qml  SettingsPid.qml  SettingsTuning.qml  SettingsUi.qml  ShowControllerOutput.qml  TimingSettings.qml  pidtoolkitui.qrc
src/cpp/libpidtoolkituiviewmodel/: CMakeLists.txt  blackbox.cpp  modbus.cpp  tuning.cpp
src/cpp/libpidtuningblackbox/: CMakeLists.txt  blackbox.cpp  options.cpp  output.cpp  setting.cpp
src/cpp/pidblackboxtuning/: CMakeLists.txt  master.cpp  pidblackboxtuning.cpp
src/cpp/pidtoolkitplugin/Pid/Toolkit/: .gitignore  CMakeLists.txt  empty.qrc  emptyqmldir  pathvalidator.cpp  pidtoolkitplugin.qrc  plugin.cpp  plugin.qrc.in  qmldir  qmldir.in  toolkit.pro
src/cpp/pidtoolkitplugin/Pid/Toolkit/empty/: CMakeLists.txt  ComponentCommunication.qml  ComponentController.qml  ComponentFactor.qml  ComponentFilePath.qml  ComponentKpid.qml  ComponentLog.qml  ComponentSettings.qml  ComponentStatus.qml  ComponentTuneController.qml  ComponentTuneKpid.qml  ComponentTuning.qml  ComponentUiAccuracy.qml  ComponentUiFormat.qml  ComponentUiNumber.qml  ComponentUiRange.qml  ConfigurationBlackBox.qml  ConfigurationController.qml  ConfigurationModbus.qml  ConfigurationSettings.qml  ConfigurationTimer.qml  ConfigurationTuning.qml  ConfigurationUi.qml  ContentController.qml  ContentSettings.qml  ControlFilePath.qml  ControlGroup.qml  ControlRealSpinBox.qml  GroupCommunication.qml  GroupController.qml  GroupRange.qml  GroupSettings.qml  GroupStatus.qml  GroupUiRange.qml  IndicatorGauge.qml  PanelMain.qml  TabBlackBoxEvaluation.qml  TabViewSettings.qml  Test.qml  Toolkit.qml  (+2 more)
src/cpp/pidtoolkitplugin/Pid/Toolkit/qml/: ComponentCommunication.qml  ComponentCommunicationForm.ui.qml  ComponentController.qml  ComponentControllerForm.ui.qml  ComponentFactor.qml  ComponentFactorForm.ui.qml  ComponentFilePath.qml  ComponentFilePathForm.ui.qml  ComponentKpid.qml  ComponentKpidForm.ui.qml  ComponentLog.qml  ComponentLogForm.ui.qml  ComponentRange.qml  ComponentRangeForm.ui.qml  ComponentSettingsForm.ui.qml  ComponentStatus.qml  ComponentStatusForm.ui.qml  ComponentTuneControllerForm.ui.qml  ComponentTuneEvaluation.qml  ComponentTuneEvaluationForm.ui.qml  ComponentTuneKpiRange.qml  ComponentTuneKpiRangeForm.ui.qml  ComponentTuneKpidForm.ui.qml  ComponentTuning.qml  ComponentTuningForm.ui.qml  ComponentUiAccuracy.qml  ComponentUiAccuracyForm.ui.qml  ComponentUiFormat.qml  ComponentUiFormatForm.ui.qml  ComponentUiNumber.qml  ComponentUiNumberForm.ui.qml  ComponentUiRange.qml  ComponentUiRangeForm.ui.qml  ConfigurationBlackBox.qml  ConfigurationBlackBoxForm.ui.qml  ConfigurationController.qml  (+52 more)
src/cpp/pidtoolkitserver/: CMakeLists.txt  pidtoolkitserver.cpp  pidtoolkitservice.mc  winsvc.cpp
src/cpp/pidtoolkitserver/win/: configuration.cpp  installer.cpp  installer.h  service.h  trigger.cpp  trigger.h
src/cpp/pidtoolkitui/: CMakeLists.txt  blackbox.cpp  blackbox.h  configuration.cpp  configuration.h  configuration.ini  items.cpp  items.h  models.cpp  models.h  orchestration.cpp  orchestration.h  pidtoolkit.qrc  pidtoolkitui.cpp  pidtoolkitui.pro  qtquickcontrols2.conf  resources.qrc  ui.cpp  ui.h
src/cpp/pidtoolkitui/item/: interval.cpp  interval.h
src/cpp/pidtoolkitui/model/: interval.cpp  interval.h  mode.cpp  mode.h  tuning.cpp  tuning.h
src/cpp/pidtoolkitui/qml/: BlackBoxDialog.qml  BlackBoxTabEvaluation.qml  BlackBoxTabStartRange.qml  BlackBoxTabTimersOther.qml  BlackBoxTabView.qml  DialogController.qml  DialogSettings.qml  PidChart.qml  PidChartPanel.qml  PidChartPanelForm.ui.qml  PidPanel.qml  RealTimePanel.qml  RightPanel.qml  TuningPanel.qml  UiDialog.qml  UiTab.qml  UiTabView.qml  main.qml  pidtoolkit.qrc
src/cpp/pidtoolkitui/qml/pid/: PidChart.qml  PidPanel.qml  main.qml
tests/cpp/pid/toolkit/: CMakeLists.txt  stability.cpp
(+179 files in other folders)
